RAID-62: Replace plural with singular in validation message field ids